--- a/src/styles/Task.module.css
+++ b/src/styles/Task.module.css
@@ -7,6 +7,9 @@ p, h2 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    
+    overflow-y: scroll;
+    max-height: min(500px, 50%);
 }
 
 .task-wrapper {
