--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -6,11 +6,15 @@
     padding: 1.5rem;
     z-index: 3;
     height: 100%;
-    background: #36454F;
+    backdrop-filter: blur(20px);
+    border-radius: 1rem;
 }
 
 .top {
-    border-bottom: 2px solid orange;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+    margin-bottom: 1rem;
 }
 
 .bottom > header {
