--- a/src/styles/Task.module.css
+++ b/src/styles/Task.module.css
@@ -7,9 +7,10 @@ p, h2 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 1rem;
     
     overflow-y: scroll;
-    height: min(500px, 50%);
+    max-height: 450px;
 }
 
 .task-wrapper {
