--- a/src/styles/Tasks.module.css
+++ b/src/styles/Tasks.module.css
@@ -16,7 +16,7 @@ h1::after {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    max-width: 500px;
+    max-width: min(500px, 100%);
 }
 
 .day-status {
